--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -30,7 +29,7 @@
 }
 
 .intro-container {
-  max-width: 500px;
+  font-size: large;
 }
 
 .about-me-container {
@@ -43,5 +42,15 @@
 }
 .about-me-text {
   font-size: large;
-  width: 150px;
+  padding-right: 500px;
+}
+.welcome-header {
+  font-size: xx-large;
+}
+.activities-text {
+  font-size: large;
+  padding-right: 500px;
+}
+.activities-container {
+  padding-top: 150px;
 }
